deploy-item.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items-api
  template:
    metadata:
      labels:
        app: items-api
    spec:
      containers:
      - name: items-api
        image: edez58/pir-api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: items-api-svc
spec:
  selector:
    app: items-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
